--- a/src/app/shared/pages/dictionary-page/dictionary-page.component.html
+++ b/src/app/shared/pages/dictionary-page/dictionary-page.component.html
@@ -1,3 +1,6 @@
 <header class="w-full px-10 mt-10">
   <shared-nav-bar></shared-nav-bar>
 </header>
+<section>
+  <shared-search-box></shared-search-box>
+</section>
