Empezando word-definition module

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -4,7 +4,6 @@
     placeholder="Search word..."
     [value]="initialValue"
     (keyup.enter)="emitValue(textSearchBox.value)"
-    #txtSearchBox
-
+    #textSearchBox
   />
 </div>
