--- a/src/app/shared/pages/dictionary-page/dictionary-page.component.html
+++ b/src/app/shared/pages/dictionary-page/dictionary-page.component.html
@@ -2,5 +2,7 @@
   <shared-nav-bar></shared-nav-bar>
 </header>
 <section>
-  <shared-search-box></shared-search-box>
+  <shared-search-box
+    (onValue)="emitValue($event)"
+  ></shared-search-box>
 </section>
