Obteniendo definicion de palabras desde la API

--- a/src/app/shared/pages/dictionary-page/dictionary-page.component.html
+++ b/src/app/shared/pages/dictionary-page/dictionary-page.component.html
@@ -3,6 +3,6 @@
 </header>
 <section>
   <shared-search-box
-    (onValue)="emitValue($event)"
+    (onValue)="searchWord($event)"
   ></shared-search-box>
 </section>
